test_inputs/good/const_propagation.lat
int main() {
    int a = 2;
    int b = 7;
    int c = a * b;

    int i = 0;
    int j = i + 2;

    while (i < j) {
        printInt(c);
        c = b;
        i++;
    }

    return 0;
}
