test_inputs/bad/inheritance.cycle.lat
class A extends A {

}

int main() {
    return 0;
}
